# plerion-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.claude/skills/audit-openapi/: SKILL.md
.github/workflows/: openapi-monitor.yml  release.yml
docs/: configuration.mdx  docs.json  installation.mdx  introduction.mdx  output-formats.mdx
docs/commands/: alerts.mdx  asset-groups.mdx  assets.mdx  audit-logs.mdx  aws.mdx  compliance-frameworks.mdx  configure.mdx  findings.mdx  iac.mdx  integrations.mdx  risks.mdx  tenant.mdx  vulnerabilities.mdx  well-architected-frameworks.mdx
src/: error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs
src/api/endpoints/: alerts.rs  assets.rs  (+12 more)
src/cli/: alerts.rs  asset_groups.rs  assets.rs  audit_logs.rs  aws.rs  compliance.rs  configure.rs  findings.rs  iac.rs  integrations.rs  mod.rs  risks.rs  tenant.rs  vulnerabilities.rs  well_architected.rs
src/config/: credentials.rs  mod.rs
src/output/: json.rs  mod.rs  table.rs  text.rs  yaml.rs
tests/: alerts_test.rs  asset_groups_test.rs  assets_extra_test.rs  assets_test.rs  audit_logs_test.rs  aws_test.rs  cli_crud_test.rs  cli_integration_test.rs  client_test.rs  compliance_test.rs  config_load_test.rs  config_test.rs  credentials_test.rs  error_test.rs  findings_test.rs  iac_test.rs  integrations_test.rs  models_extra_test.rs  models_test.rs  output_render_test.rs  output_test.rs  risks_test.rs  sort_validation_test.rs  table_render_test.rs  table_test.rs  tenant_test.rs  vuln_exemptions_test.rs  vulnerabilities_test.rs  well_architected_test.rs
(+13 files in other folders)
