[package]
name = "plerion"
version = "0.1.3"
edition = "2021"
description = "Plerion CLI — manage cloud security findings, assets, risks and more"
license = "MIT"
repository = "https://github.com/plerionhq/plerion-cli"

[[bin]]
name = "plerion"
path = "src/main.rs"

[lib]
name = "plerion"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
configparser = "3"
comfy-table = "7"
jmespatch = "0.3"
dirs = "5"
bytes = "1"
anyhow = "1"
thiserror = "1"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
